# deeplog

./: .clang-format  .clang-tidy  .copier-answers.yml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.rst  index.html  options.cmake  sources.cmake  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: cpp-ci.yml  gh-pages.yml
apps/deeplog-cli/: CMakeLists.txt  deeplog.main.cpp
apps/deeplog-cli/include/dplx/dlog/tui/: log_display_grid.hpp  theme.hpp
apps/deeplog-cli/src/: deeplog.main.cpp
apps/deeplog-cli/src/dlog/: log_display_grid.cpp  theme.cpp
apps/deeplog-cli/src/dlog_cli_tests/: test_utils.hpp
apps/deeplog-cli/src/dplx/dlog/: tui.cpp  tui.hpp
apps/deeplog-cli/src/dplx/dlog/tui/: log_display_grid.cpp  log_display_grid.hpp  theme.cpp  theme.hpp  theme.test.cpp
apps/deeplog-cli/tests/: boost-test.hpp  deeplog-cli-tests.main.cpp
docs/: CMakeLists.txt  Pipfile  conf.py  index.rst  requirements.txt
docs/_templates/sidebar/: navigation.html
docs/modules/: data-formats.cddl  data-formats.rst  record_container.cddl
examples/: CMakeLists.txt
examples/log-complete/: ecomponent.cpp  ecomponent.hpp  log-complete.main.cpp
include/dplx/dlog/: argument_transmorpher_fmt.hpp  arguments.hpp  attribute_transmorpher.hpp  concepts.hpp  definitions.hpp  disappointment.hpp  file_database.hpp  llfio.hpp  log_bus.hpp  log_clock.hpp  record_container.hpp  sink.hpp  source.hpp
libs/deeplog/: CMakeLists.txt
libs/deeplog/src/dlog_tests/: test_dir.hpp  test_utils.hpp
libs/deeplog/src/dplx/: dlog.cpp  dlog.hpp  dlog.test.cpp
libs/deeplog/src/dplx/dlog/: any_attribute.hpp  any_attribute.test.cpp  argument_transmorpher_fmt.hpp  arguments.hpp  attribute_transmorpher.cpp  attribute_transmorpher.hpp  attribute_transmorpher.test.cpp  attributes.cpp  attributes.hpp  concepts.hpp  config.hpp  config.test.cpp  core.hpp  definitions.hpp  disappointment.hpp  file_database.cpp  file_database.test.cpp  fwd.hpp  fwd.test.cpp  llfio.hpp  log_bus.cpp  log_bus.hpp  log_clock.cpp  log_clock.hpp  log_fabric.cpp  log_fabric.hpp  log_fabric.test.cpp  loggable.hpp  loggable.test.cpp  macros.hpp  record_container.cpp  record_container.hpp  record_container.test.cpp  sink.cpp  sink.hpp  source.cpp  source.hpp  source.test.cpp  span_scope.cpp  span_scope.hpp  (+1 more)
libs/deeplog/src/dplx/dlog/bus/: buffer_bus.cpp  buffer_bus.hpp  buffer_bus.test.cpp  mpsc_bus.cpp  mpsc_bus.hpp  mpsc_bus.test.cpp
libs/deeplog/src/dplx/dlog/core/: file_database.cpp  file_database.hpp  file_database.test.cpp  log_clock.cpp  log_clock.hpp  log_clock.test.cpp  serialized_messages.cpp  serialized_messages.hpp  serialized_messages.test.cpp  strong_types.cpp  strong_types.hpp  strong_types.test.cpp
libs/deeplog/src/dplx/dlog/detail/: any_loggable_ref.hpp  any_reified.hpp  any_reified.test.cpp  file_stream.hpp  hex.hpp  interleaving_stream.cpp  interleaving_stream.hpp  interleaving_stream.test.cpp  platform.cpp  platform.hpp  platform.test.cpp  system_error2_fmt.hpp  tls.cpp  tls.hpp  utils.hpp  workaround.hpp  workaround.test.cpp  x_poly_types.inl
libs/deeplog/src/dplx/dlog/sinks/: file_sink.cpp  file_sink.hpp  sink_frontend.cpp  sink_frontend.hpp
libs/deeplog/src/dplx/dlog/source/: log.cpp  log.hpp  log.test.cpp  log_context.cpp  log_context.hpp  log_context.test.cpp  log_record_port.cpp  log_record_port.hpp  log_record_port.test.cpp  record_output_buffer.hpp  span_scope.cpp  span_scope.hpp  span_scope.test.cpp
libs/deeplog_tui/: CMakeLists.txt
libs/deeplog_tui/src/dlog_tui_tests/: test_utils.hpp
libs/deeplog_tui/src/dplx/dlog/: tui.test.cpp
libs/deeplog_tui/src/dplx/dlog/tui/: log_display_grid.cpp  log_display_grid.hpp  log_display_grid.test.cpp  theme.cpp  theme.test.cpp
master/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
master/.doctrees/: environment.pickle  index.doctree
master/.doctrees/modules/: data-formats.doctree  user-types.doctree
master/_sources/: index.rst.txt
master/_sources/modules/: data-formats.rst.txt  user-types.rst.txt
master/_static/: documentation_options.js
master/_static/css/: custom.css
master/modules/: data-formats.html  user-types.html
src/dlog/: disappointment.cpp  file_database.cpp  log_clock.cpp  record_container.cpp
src/dlog_tests/: test_dir.hpp  test_utils.hpp
src/dplx/: dlog.hpp  dlog.test.cpp
src/dplx/dlog/: any_attribute.hpp  argument_transmorpher_fmt.hpp  arguments.hpp  attribute_transmorpher.cpp  attribute_transmorpher.hpp  attributes.cpp  fwd.hpp  (+31 more)
tests/: api.test.cpp  bufferbus.test.cpp  deeplog-tests.main.cpp  file_database.test.cpp  interleaving_stream.test.cpp  record_container.test.cpp  ringbus.test.cpp  test-utils.hpp
tools/: config.hpp.in  deeplog-config.cmake.in
tools/cmake/: CheckStdAtomicRefSupport.cmake  CompilerWarnings.cmake  EnforceOutOfSourceBuilds.cmake  FindSphinx.cmake  Findsphinx.cmake  SourceHelpers.cmake  VcpkgDefaults.cmake
tools/files/: log-test.20210825T065118.dlog  log-test.20210916T131700.dlog  log-test.2023-03-31T16-00-43.dlog  log-test.2023-03-31T16-01-14.dlog  log-test.2023-06-14T08-57-59.dlog  log-test.2023-07-17T07-37-37.dlog  log-test.2023-07-17T07-37-42.dlog  log-test.drot
tools/toolchains/: arm64-macos-clang-16-brew.cmake  arm64-macos-clang-19-brew.cmake  clang-15-x64-linux.cmake  clang-x64-linux.cmake  x64-linux-clang-16.cmake  x64-linux-clang-19.cmake  x64-linux-clang-20.cmake  x64-linux-gcc-12.cmake  x64-linux-gcc.cmake  x64-macos-clang-16-brew.cmake  x64-macos-gcc-12.cmake  x64-macos-gcc-14.cmake
tools/triplets/: arm64-macos-clang-16-brew.cmake  arm64-macos-clang-19-brew.cmake  x64-linux-clang-15.cmake  x64-linux-clang-16.cmake  x64-linux-clang-19.cmake  x64-linux-clang-20.cmake  x64-linux-clang.cmake  x64-osx-clang-16-brew.cmake  x64-osx-gcc-12.cmake  x64-osx-gcc-14.cmake  x64-windows-static-lto.cmake  x64-windows-static.cmake
(+27 files in other folders)
